tests/neg/struct5.check
12 |     sep1(t3, p)
   |     ^^^^^^^^^^^

     Separation error: {p, cap$34} and {t3} are not separated
